# opengl-window-tutorial

./: CMakeLists.txt  README.md  readme.rst
include/glad/: glad.h
libs/glfw/src/: Makefile  cmake_install.cmake  glfw3.pc  glfw_config.h  libglfw.so.3.3
src/: glad.c  window.cpp
